[package]
name = "simple_daemon"
description = "An example of the daemons with simple action"
authors = ["BorisZhguchev <zhguchev@hotmail.com>"]
homepage = "https://github.com/besok/forester"
repository = "https://github.com/besok/forester"
version = "0.0.1"
edition = "2021"


[dependencies]
forester-rs = "0.3.0"
serde_json = { version = "1.0.99" }
log = "0.4"
env_logger = "0.10.0"

axum  = "0.6.20"
axum-server = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.166", features = ["derive"] }
tokio-util = "0.7.10"
