[package]
name = "simple_rem_action"
description = "The simple remote action service for Forester"
authors = ["BorisZhguchev <zhguchev@hotmail.com>"]
homepage = "https://github.com/besok/forester"
repository = "https://github.com/besok/forester"
version = "0.0.1"
edition = "2021"


[dependencies]
axum  = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = { version = "1.0.99" }
forester-http={path = "../../../forester/tools/forester-http"}